--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@
     --secondary-500: #19bfd3;  
     --caution-light: rgba(245, 127, 23, 0.07);
     --caution-text: #f57f17;  
+    --hint-object-error: #d32f2f;
 }
 
 html {
@@ -100,4 +101,10 @@ img{
     font-size: 2.1rem;
     font-weight: 500;
     line-height: 2.1;
+}
+.ellipsis-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
