products page init

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,3 +111,8 @@ img{
     box-shadow: 0 1px 1px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.3);
     @apply flex rounded-b-sm rounded-l-sm bg-white absolute top-[35px] w-auto
 }
+.text-caption-strong {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 2.17;
+}
