--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,3 +116,8 @@ img{
     font-weight: 700;
     line-height: 2.17;
 }
+.text-h4 {
+    font-size: 1.9rem;
+    font-weight: 700;
+    line-height: 2.1;
+}
