--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,8 @@ img{
     font-weight: 700;
     line-height: 2.1;
 }
+.text-subtitle-strong {
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 2.15;
+}
