product grid  first page added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,3 +126,8 @@ img{
     font-weight: 700;
     line-height: 2.15;
 }
+.text-body2-strong{
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 2.17;
+}
