--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -135,3 +135,8 @@ img {
   font-weight: 700;
   line-height: 2.15;
 }
+.text-body-1 {
+  font-weight: 700;
+  line-height: 2.15;
+  font-size: 1.4rem;
+}
