--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,3 +140,8 @@ img {
   line-height: 2.15;
   font-size: 1.4rem;
 }
+.text-h2 {
+  font-size: 2.6rem;
+  font-weight: 500;
+  line-height: 2.1;
+}
