--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,6 +140,11 @@ img {
   line-height: 2.15;
   font-size: 1.4rem;
 }
+.text-body {
+  font-weight: 400;
+  line-height: 2.15;
+  font-size: 1.2rem;
+}
 .text-h2 {
   font-size: 2.6rem;
   font-weight: 500;
